src/app/globals.css
@import 'tailwindcss';

/* Gradient colors */
@property --gradient-color-a {
	syntax: '<color>';
	initial-value: transparent;
	inherits: false;
}

@property --gradient-color-b {
	syntax: '<color>';
	initial-value: transparent;
	inherits: false;
}

@property --gradient-color-c {
	syntax: '<color>';
	initial-value: transparent;
	inherits: false;
}

@property --gradient-color-d {
	syntax: '<color>';
	initial-value: transparent;
	inherits: false;
}

@keyframes ripple {
	0% {
		filter: blur(0px);
		background-position: 100%;
	}
	23% {
		background-position: 100%;
	}
	25% {
		filter: blur(0px);
	}
	30% {
		filter: blur(10px);
	}
	35% {
		filter: blur(0px);
	}
	38% {
		background-position: 0%;
	}
	100% {
		filter: blur(0px);
		background-position: 0%;
	}
}

:root {
	--background: #ffffff;
	--foreground: #171717;
}

@theme {
	--work-list-style: radial-gradient(
		circle at 50% 55%,
		transparent 0,
		transparent 35%,
		rgb(98, 116, 142) 35%,
		rgb(98, 116, 142) 55%,
		transparent 55%
	);

	--ripple-gradient: linear-gradient(
		45deg,
		oklch(14.5% 0 0) 0%,
		oklch(14.5% 0 0) 30%,
		oklch(14.5% 0 0 / 0) 40%,
		oklch(14.5% 0 0 / 0) 50%,
		oklch(14.5% 0 0 / 0) 60%,
		oklch(14.5% 0 0) 74%,
		oklch(14.5% 0 0) 100%
	);

	--ripple-animation: ripple 30s ease-in-out forwards infinite;

	--gradient-color-a: rgba(0, 0, 0, 0);
	--gradient-color-b: rgba(0, 0, 0, 0);
	--gradient-color-c: rgba(0, 0, 0, 0);
	--gradient-color-d: rgba(0, 0, 0, 0);

	--dynamic-gradient-1: linear-gradient(in oklch 30deg, var(--gradient-color-a) 0%, var(--gradient-color-b) 100%);
	--dynamic-gradient-2: linear-gradient(in oklch 270deg, var(--gradient-color-c) 0%, var(--gradient-color-d) 100%);
	/* --ease-snappy-dot: cubic-bezier(); */
}

@theme inline {
	--color-background: var(--background);
	--color-foreground: var(--foreground);
	--font-sans: var(--font-roboto);
	--font-mono: var(--font-fira-code);

	--color-banana-cream-50: rgb(254 252 230);
	--color-banana-cream-100: rgb(253 249 206);
	--color-banana-cream-200: rgb(251 244 157);
	--color-banana-cream-300: rgb(250 238 107);
	--color-banana-cream-400: rgb(248 232 58);
	--color-banana-cream-500: rgb(246 226 9);
	--color-banana-cream-600: rgb(197 181 7);
	--color-banana-cream-700: rgb(148 136 5);
	--color-banana-cream-800: rgb(98 91 4);
	--color-banana-cream-900: rgb(49 45 2);
	--color-banana-cream-950: rgb(34 32 1);

	--color-pearl-aqua-50: rgb(236 248 248);
	--color-pearl-aqua-100: rgb(217 242 241);
	--color-pearl-aqua-200: rgb(180 228 228);
	--color-pearl-aqua-300: rgb(142 215 214);
	--color-pearl-aqua-400: rgb(104 202 200);
	--color-pearl-aqua-500: rgb(66 189 187);
	--color-pearl-aqua-600: rgb(53 151 149);
	--color-pearl-aqua-700: rgb(40 113 112);
	--color-pearl-aqua-800: rgb(27 75 75);
	--color-pearl-aqua-900: rgb(13 38 37);
	--color-pearl-aqua-950: rgb(9 26 26);

	--color-aquamarine-50: rgb(230 254 243);
	--color-aquamarine-100: rgb(206 253 231);
	--color-aquamarine-200: rgb(157 251 207);
	--color-aquamarine-300: rgb(107 250 183);
	--color-aquamarine-400: rgb(58 248 159);
	--color-aquamarine-500: rgb(9 246 135);
	--color-aquamarine-600: rgb(7 197 108);
	--color-aquamarine-700: rgb(5 148 81);
	--color-aquamarine-800: rgb(4 98 54);
	--color-aquamarine-900: rgb(2 49 27);
	--color-aquamarine-950: rgb(1 34 19);

	--color-jasmine-50: rgb(255 247 229);
	--color-jasmine-100: rgb(255 238 204);
	--color-jasmine-200: rgb(255 221 153);
	--color-jasmine-300: rgb(255 204 102);
	--color-jasmine-400: rgb(255 187 51);
	--color-jasmine-500: rgb(255 170 0);
	--color-jasmine-600: rgb(204 136 0);
	--color-jasmine-700: rgb(153 102 0);
	--color-jasmine-800: rgb(102 68 0);
	--color-jasmine-900: rgb(51 34 0);
	--color-jasmine-950: rgb(36 24 0);

	--color-pink-mist-50: rgb(249 235 241);
	--color-pink-mist-100: rgb(243 216 227);
	--color-pink-mist-200: rgb(232 176 199);
	--color-pink-mist-300: rgb(220 137 172);
	--color-pink-mist-400: rgb(208 98 144);
	--color-pink-mist-500: rgb(196 59 116);
	--color-pink-mist-600: rgb(157 47 93);
	--color-pink-mist-700: rgb(118 35 70);
	--color-pink-mist-800: rgb(79 23 46);
	--color-pink-mist-900: rgb(39 12 23);
	--color-pink-mist-950: rgb(27 8 16);

	--color-vibrant-coral-50: rgb(253 234 232);
	--color-vibrant-coral-100: rgb(250 213 209);
	--color-vibrant-coral-200: rgb(246 172 162);
	--color-vibrant-coral-300: rgb(241 130 116);
	--color-vibrant-coral-400: rgb(237 89 69);
	--color-vibrant-coral-500: rgb(232 47 23);
	--color-vibrant-coral-600: rgb(186 38 18);
	--color-vibrant-coral-700: rgb(139 28 14);
	--color-vibrant-coral-800: rgb(93 19 9);
	--color-vibrant-coral-900: rgb(46 9 5);
	--color-vibrant-coral-950: rgb(32 7 3);

	--color-cool-sky-50: rgb(230 243 254);
	--color-cool-sky-100: rgb(205 230 254);
	--color-cool-sky-200: rgb(155 206 253);
	--color-cool-sky-300: rgb(105 181 252);
	--color-cool-sky-400: rgb(55 156 251);
	--color-cool-sky-500: rgb(5 132 250);
	--color-cool-sky-600: rgb(4 105 200);
	--color-cool-sky-700: rgb(3 79 150);
	--color-cool-sky-800: rgb(2 53 100);
	--color-cool-sky-900: rgb(1 26 50);
	--color-cool-sky-950: rgb(1 18 35);
}

@media (prefers-color-scheme: dark) {
	:root {
		--background: #0a0a0a;
		--foreground: #ededed;
	}
}

body {
	background: var(--background);
	color: var(--foreground);
	font-family: var(--font-roboto), Arial, Helvetica, sans-serif;
}

.dynamic-background {
	--bg-trans-duration: 1000ms;
	background-image:
		linear-gradient(in oklch 30deg, var(--gradient-color-a) 0%, var(--gradient-color-b) 100%),
		linear-gradient(in oklch 315deg, var(--gradient-color-c) 0%, var(--gradient-color-d) 100%);
	background-size:
		150% 150%,
		150% 150%;
	background-position:
		0 0,
		0 0;
	background-repeat: no-repeat;
	transition:
		--gradient-color-a var(--bg-trans-duration),
		--gradient-color-b var(--bg-trans-duration),
		--gradient-color-c var(--bg-trans-duration),
		--gradient-color-d var(--bg-trans-duration),
		background-position var(--bg-trans-duration);
}

.dynamic-background:has(.home-page) {
	/* --gradient-color-a: rgba(198, 129, 212, 1); */
	--gradient-color-a: rgba(178, 129, 152, 1);
	--gradient-color-b: rgba(255, 224, 171, 1);
	--gradient-color-c: rgba(0, 0, 0, 0);
	--gradient-color-d: rgba(0, 0, 0, 0);
	background-position:
		0% 0%,
		0% 0%;
}

.dynamic-background:has(.about-page) {
	--gradient-color-a: rgba(128, 128, 252, 0);
	--gradient-color-b: rgba(128, 128, 71, 0.3);
	--gradient-color-c: rgba(255, 209, 117, 1);
	--gradient-color-d: rgba(212, 255, 158, 0.9);

	background-position:
		30% 50%,
		0% 50%;
}
.dynamic-background:has(.cv-page) {
	--gradient-color-a: rgba(252, 245, 169, 1);
	--gradient-color-b: rgba(201, 224, 206, 1);
	--gradient-color-c: rgba(128, 128, 117, 0);
	--gradient-color-d: rgba(128, 128, 158, 0);

	background-position:
		50% 25%,
		0% 25%;
}
.dynamic-background:has(.projects-page) {
	--gradient-color-a: rgba(178, 252, 218, 0.6);
	--gradient-color-b: rgba(188, 188, 238, 0.3);
	--gradient-color-c: rgba(225, 242, 228, 1);
	--gradient-color-d: rgba(232, 229, 245, 1);

	background-position:
		75% 25%,
		50% 25%;
}

